Fixing icon size on mobile phone size

--- a/src/components/Projects/components/Project/Project.css
+++ b/src/components/Projects/components/Project/Project.css
@@ -33,6 +33,7 @@
 .projectname-projecturi img {
     margin-left: auto;
     width: 30px;
+    height: 30px;
 }
 
 .projectname-projecturi img:hover{
